[package]
name = "redis-ac"
version = "0.2.1"
authors = ["Yushi Omote <yushi.omote@sbibits.com>"]
keywords = ["redis", "database"]
description = "Asynchronuos commands helper for redis-rs"
homepage = "https://github.com/yushiomote/redis-ac"
repository = "https://github.com/yushiomote/redis-ac"
documentation = "https://docs.rs/redis-ac"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"

[features]
default = []
geospatial = ["redis/geospatial"]
readme = []

[dependencies]
futures = "0.1"
redis = "0.13"

[dev-dependencies]
tokio = "0.1"
structopt = "0.3"
